# GNodeGUI

./: CMakeLists.txt  README.md
GNodeGUI/: CMakeLists.txt
GNodeGUI/include/gnodegui/: graph_editor.hpp  graph_viewer.hpp  graphics_comment.hpp  graphics_group.hpp  graphics_link.hpp  graphics_node.hpp  graphics_node_geometry.hpp  logger.hpp  node_proxy.hpp  style.hpp  utils.hpp
GNodeGUI/include/gnodegui/icons/: abstract_icon.hpp  clear_all_icon.hpp  dots_icon.hpp  fit_content_icon.hpp  group_icon.hpp  import_icon.hpp  link_type_icon.hpp  load_icon.hpp  lock_icon.hpp  new_icon.hpp  reload_icon.hpp  save_icon.hpp  screenshot_icon.hpp  select_all_icon.hpp  show_settings_icon.hpp  viewport_icon.hpp
GNodeGUI/src/: graph_editor.cpp  graph_viewer.cpp  graphic_node_geometry.cpp  graphics_comment.cpp  graphics_group.cpp  graphics_link.cpp  graphics_node.cpp  graphics_node_geometry.cpp  logger.cpp  node_proxy.cpp  style.cpp  utils.cpp
GNodeGUI/src/icons/: abstract_icon.cpp  clear_all_icon.cpp  dots_icon.cpp  fit_content_icon.cpp  group_icon.cpp  import_icon.cpp  link_type_icon.cpp  load_icon.cpp  lock_icon.cpp  new_icon.cpp  reload_icon.cpp  save_icon.cpp  screenshot_icon.cpp  select_all_icon.cpp  show_settings_icon.cpp  viewport_icon.cpp
scripts/: format_src.sh
tests/test/: CMakeLists.txt  main.cpp
